--- a/cms7-dev/src/app/pages/pages.component.html
+++ b/cms7-dev/src/app/pages/pages.component.html
@@ -13,64 +13,68 @@
     </div>
     <div class="row g-2">
         <div class="col-6">
-            <ul class="sortable" >
-                <li *ngFor="let x of pages" data-id="{{x.id}}" class="border p-1 mb-1 status-{{x.status}} " [ngClass]="{'bg-light': x.status == '4'}">
-                    <div class="row g-1">
-                        <div class="col-7 align-self-center">
-                            <a (click)="httpGet(x.id);" [ngClass]="{'active': id == x.id}" [routerLink]="[ '/pages']" [queryParams]="{id: x.id}">{{x.name}} [{{x.id}}]</a>
-                            <small class="" [hidden]="x.ilock != 1"><i class="bi bi-lock"></i> </small>
-                        </div>
-                        <div class="col-5 text-end">  
-                            <span [hidden]="x.parent_id!= '0'">
-                                <span class="me-1 text-warning" [hidden]="x.idefault != 1" title="Dafault Landing Pages"> <i class="bi bi-star-fill"></i></span>
-                                <button class="btn btn-sm me-1" (click)="pagesSetDefault(x.id);" [hidden]="x.idefault == 1" title="Dafault Landing Pages"> <i class="bi bi-star"></i></button>
-                            </span>
+            <div class="border p-1 shadow-sm mb-3 area">
 
-                            <a [routerLink]="[ '/pages', x.id ]" class="btn btn-sm btn-light me-1"><i class="bi bi-pencil-square"></i></a>
-                            <a class="btn btn-sm btn-light me-1 handle" data-table="pages"> <i class="bi bi-arrow-down-up"></i> </a>
-                            <button class="btn btn-sm btn-light me-1" (click)="fnStatus(4, x);" *ngIf="x.status == 1"> <i class="bi bi-eye-fill"></i> </button>
-                            <button class="btn btn-sm btn-light me-1" (click)="fnStatus(0, x);" *ngIf="x.status == 4"> <i class="bi bi-eye-slash"></i> </button>
-                            <button class="btn btn-sm btn-light me-1" (click)="fnStatus(1, x);" *ngIf="x.status == 0"> <i class="bi bi-eye"></i></button>
-                            <button class="btn btn-sm btn-danger" [disabled]="x.ilock == 1"><i class="bi bi-trash-fill"></i> </button>
-                        </div>
-                        <div class="col-12">
-                            <a href="javascript:;"> <small><i class="bi bi-link-45deg"></i> http://localhost/website/cms7/public/home/</small></a>
-                        </div>
+                <ul class="sortable">
+                    <li *ngFor="let x of pages" data-id="{{x.id}}" class="border p-1 mb-1 status-{{x.status}} " [ngClass]="{'bg-light': x.status == '4'}">
+                        <div class="row g-1">
+                            <div class="col-7 align-self-center">
+                                <a (click)="httpGet(x.id);" [ngClass]="{'active': id == x.id}" [routerLink]="[ '/pages']" [queryParams]="{id: x.id}">{{x.name}} [{{x.id}}]</a>
+                                <small class="" [hidden]="x.idefault != 1"><i class="bi bi-lock"></i> </small>
+                            </div>
+                            <div class="col-5 text-end">
+                                <span [hidden]="x.parent_id!= '0'">
+                                    <span class="me-1 text-warning" [hidden]="x.idefault != 1" title="Dafault Landing Pages"> <i class="bi bi-star-fill"></i></span>
+                                    <button class="btn btn-sm me-1" (click)="pagesSetDefault(x.id);" [hidden]="x.idefault == 1" title="Dafault Landing Pages"> <i class="bi bi-star"></i></button>
+                                </span>
 
-                    </div>
-                </li>
-            </ul>
-            <div class="border p-1 mb-1">
-                <button class="btn btn-sm" (click)="pagesInsertParent()">New Parent sibling_id : {{id}}</button>
+                                <a [routerLink]="[ '/pages', x.id ]" class="btn btn-sm btn-light me-1"><i class="bi bi-pencil-square"></i></a>
+                                <a class="btn btn-sm btn-light me-1 handle" data-table="pages"> <i class="bi bi-arrow-down-up"></i> </a>
+                                <button class="btn btn-sm btn-light me-1" (click)="fnStatus(4, x);" *ngIf="x.status == 1"> <i class="bi bi-eye-fill"></i> </button>
+                                <button class="btn btn-sm btn-light me-1" (click)="fnStatus(0, x);" *ngIf="x.status == 4"> <i class="bi bi-eye-slash"></i> </button>
+                                <button class="btn btn-sm btn-light me-1" (click)="fnStatus(1, x);" *ngIf="x.status == 0"> <i class="bi bi-eye"></i></button>
+                                <button class="btn btn-sm btn-{{x.idefault == 1 ? 'light' :  'danger' }}" [disabled]="x.idefault == 1" (click)="pagesDelete(x.id);"><i class="bi bi-trash-fill"></i> </button>
+                            </div>
+                            <div class="col-12">
+                                <a href="javascript:;"> <small><i class="bi bi-link-45deg"></i> http://localhost/website/cms7/public/home/</small></a>
+                            </div>
+
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="d-grid">
+                <button class="btn btn-sm btn-primary" (click)="pagesInsertParent()">New Parent sibling_id : {{id}}</button>
             </div>
         </div>
         <div class="col-6">
+            <div class="border p-1 shadow-sm mb-3 area">
+                <ul class="sortable" [hidden]="!id || id=='0' ">
+                    <li *ngFor="let x of pagesChild" data-id="{{x.id}}" class="border p-1 mb-1 status-{{x.status}}" [ngClass]="{'bg-light': x.status == '4'}">
+                        <div class="row g-1">
+                            <div class="col-8 align-self-center">
+                                <a (click)="httpGet(x.id);" [routerLink]="[ '/pages']" [queryParams]="{id: x.id}">{{x.name}} [{{x.id}}]</a> <small class="" [hidden]="x.idefault != 1"><i class="bi bi-lock"></i> </small>
+                            </div>
+                            <div class="col-4 text-end">
+                                <a class="btn btn-sm btn-light me-1 handle" data-table="pages"> <i class="bi bi-arrow-down-up"></i> </a>
+                                <button class="btn btn-sm btn-light me-1" (click)="fnStatus(4, x,'pagesChild');" *ngIf="x.status == 1"> <i class="bi bi-eye-fill"></i> </button>
+                                <button class="btn btn-sm btn-light me-1" (click)="fnStatus(0, x,'pagesChild');" *ngIf="x.status == 4"> <i class="bi bi-eye-slash"></i> </button>
+                                <button class="btn btn-sm btn-light me-1" (click)="fnStatus(1, x,'pagesChild');" *ngIf="x.status == 0"> <i class="bi bi-eye"></i></button>
+                                <button class="btn btn-sm btn-danger" (click)="pagesDelete(x.id);" ><i class="bi bi-trash-fill"></i> </button>
+                            </div>
+                            <div class="col-12">
+                                <a href="javascript:;"> <small><i class="bi bi-link-45deg"></i> http://localhost/website/cms7/public/home/</small></a>
+                            </div>
 
-            <ul class="sortable" [hidden]="!id || id=='0' ">
-                <li *ngFor="let x of pagesChild" data-id="{{x.id}}" class="border p-1 mb-1 status-{{x.status}}" [ngClass]="{'bg-light': x.status == '4'}">
-                    <div class="row g-1">
-                        <div class="col-8 align-self-center">
-                            <a (click)="httpGet(x.id);" [routerLink]="[ '/pages']" [queryParams]="{id: x.id}">{{x.name}} [{{x.id}}]</a> <small class="" [hidden]="x.ilock != 1"><i class="bi bi-lock"></i> </small>
                         </div>
-                        <div class="col-4 text-end">
-                            <a class="btn btn-sm btn-light me-1 handle" data-table="pages"> <i class="bi bi-arrow-down-up"></i> </a>
-                            <button class="btn btn-sm btn-light me-1" (click)="fnStatus(4, x,'pagesChild');" *ngIf="x.status == 1"> <i class="bi bi-eye-fill"></i> </button>
-                            <button class="btn btn-sm btn-light me-1" (click)="fnStatus(0, x,'pagesChild');" *ngIf="x.status == 4"> <i class="bi bi-eye-slash"></i> </button>
-                            <button class="btn btn-sm btn-light me-1" (click)="fnStatus(1, x,'pagesChild');" *ngIf="x.status == 0"> <i class="bi bi-eye"></i></button>
-                            <button class="btn btn-sm btn-danger"><i class="bi bi-trash-fill"></i> </button>
-                        </div>
-                        <div class="col-12">
-                            <a href="javascript:;"> <small><i class="bi bi-link-45deg"></i> http://localhost/website/cms7/public/home/</small></a>
-                        </div>
-
-                    </div>
-                </li>
-            </ul>
-
-
-            <div class="border p-1 mb-1" [hidden]="!id || id=='0' ">
-                <button class="btn btn-sm" (click)="pagesInsertChild()">New Child parend_id : {{id}}</button>
+                    </li>
+                </ul>
             </div>
+
+            <div class="d-grid" [hidden]="!id || id=='0' ">
+                <button class="btn btn-sm btn-primary" (click)="pagesInsertChild()">New Child parend_id : {{id}}</button>
+            </div>
+
         </div>
     </div>
 
