--- a/cms7-dev/src/app/widget/widget-section/widget-section.component.html
+++ b/cms7-dev/src/app/widget/widget-section/widget-section.component.html
@@ -3,19 +3,35 @@
     <button type="button" class="btn-close" aria-label="Close" (click)="close()"></button>
 </div>
 <div class="modal-body">
-
-    <div class="row g-1 sortable">
-        <div class="col-2 " *ngFor="let x of items">
-            <div class="p-1">
-                <img src="https://dummyimage.com/400x400/dde6ed/526d82&text={{x.h1}}-{{x.id}}" class="w-100 handle" data-id="{{x.id}}">
-                <div class="text-center">
-                    <a [routerLink]="[ '/widget/detail',x.id]"><small>Detail</small></a>
+    <div class="areaDel mb-3">
+        <div class="row">
+            <div class="col-12 text-end">
+                <input type="checkbox" [(ngModel)]="checkBoxAll" (change)="fnCheckboxAll()" id="all">
+                <label for="all" class="mx-1">Checkbox All</label>
+            </div>
+        </div>
+        <div class="row g-1 sortable">
+            <div class="col-6 col-md-2" *ngFor="let x of items">
+                <div class="p-1 widget">
+                    <div class="checkbox">
+                        <input type="checkbox" class="checkbox" [(ngModel)]="x.checkbox" (change)="fnCheckbox()"> 
+                    </div>
+                 
+                    <img [src]="x.img" class="w-100 handle" data-id="{{x.id}}">
+                    <div class="row">
+                        <div class="col text-end"> <a [routerLink]="[ '/widget/detail',x.id]"><small>Detail</small></a> </div>
+                    </div>
                 </div>
             </div>
         </div>
+
+       
     </div>
 
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-outline-dark" (click)="close()">Close</button>
+    <button type="button" class="btn btn-danger btn-sm me-3" [hidden]="!deleteEnable" (click)="deleteWidgetCheck();">Delete Widget</button>
+
+    <button type="button" class="btn btn-primary btn-sm mx-1" (click)="addWdiget();">Add Widget</button>
+    <button type="button" class="btn btn-outline-dark btn-sm" (click)="close()">Close</button>
 </div>
