--- a/cms7-dev/src/app/widget/widget-section/widget-section.component.css
+++ b/cms7-dev/src/app/widget/widget-section/widget-section.component.css
@@ -1,3 +1,24 @@
 .handle{
     cursor: move;
 }
+
+.area{
+    max-height: 50vw;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+small{
+    font-size: 0.8rem;
+}
+
+.widget{
+    position: relative;
+}
+
+.widget .checkbox{
+    position: absolute;
+    top: 4px;
+    right: 4px;
+
+}
